--- a/CryptRaider.uproject
+++ b/CryptRaider.uproject
@@ -26,5 +26,8 @@
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/a00eb1e478ae4a8fb655aa22f9125b07"
 		}
+	],
+	"TargetPlatforms": [
+		"Windows"
 	]
 }
